--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,16 @@
 #root{
     font-family: "Montserrat", sans-serif;
 }
+
+main{
+    background-color: #e0e0e0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.page{
+    max-width: 1300px;
+    width: 100%;
+}
