--- a/src/components/pages/error/error.css
+++ b/src/components/pages/error/error.css
@@ -2,5 +2,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    height: 100%;
+}
+
+#error-container {
+    text-align: center;
+}
+
+#error-container h1 {
+    color: #0076fd;
+    font-size: 140px;
+}
+
+#error-container p {
+    font-size: 20px;
 }
